--- a/src/gtk-3.0/scss/widgets/_view.scss
+++ b/src/gtk-3.0/scss/widgets/_view.scss
@@ -118,7 +118,7 @@
         -GtkTreeView-vertical-separator: 0;
 
         outline-offset: -1px;
-        border-top-color: shade($menu_bg_color, ($contrast + .1));
+        border-top-color: shade($bg_color, ($contrast + .1));
 
         &:hover, &:selected, &:selected:focus, &:backdrop:selected, &:backdrop:selected:focus { border-top-color: $selected_bg_color; }
 
