--- a/src/gtk-3.20/scss/widgets/_menu.scss
+++ b/src/gtk-3.20/scss/widgets/_menu.scss
@@ -37,10 +37,10 @@
 
         padding: 0;
         border: 0;
-        background-color: $menubar_bg_color;
+        background-color: $bg_color;
         background-image: none;
-        //box-shadow: inset 0 -1px shade($menubar_bg_color, .9);
-        color: $menubar_fg_color;
+        //box-shadow: inset 0 -1px shade($bg_color, .9);
+        color: $fg_color;
 
         > menuitem {
             min-height: 16px;
@@ -48,16 +48,16 @@
             border: 1px solid transparent;
             background-color: transparent;
             background-image: none;
-            color: $menubar_fg_color;
+            color: $fg_color;
 
             &:hover {
-                border-color: mix($menubar_bg_color, $menubar_fg_color, .21);
-                background-color: mix($menubar_bg_color, $menubar_fg_color, .21);
+                border-color: mix($bg_color, $fg_color, .21);
+                background-color: mix($bg_color, $fg_color, .21);
                 background-image: none;
-                color: shade($menubar_fg_color, 1.08);
+                color: shade($fg_color, 1.08);
             }
 
-            *:hover { color: shade($menubar_fg_color, 1.08); }
+            *:hover { color: shade($fg_color, 1.08); }
         }
     }
 }
