Change colors of titlebars
The background and foreground titlebar colors are being changed to their
general (light) equivalents.

--- a/src/gtk-3.0/scss/_global.scss
+++ b/src/gtk-3.0/scss/_global.scss
@@ -41,8 +41,8 @@ $error_color: #f44336;
 $toolbar_bg_color: $bg_color;
 $toolbar_fg_color: $fg_color;
 
-$titlebar_bg_color: $dark_bg_color;
-$titlebar_fg_color: $dark_fg_color;
+$titlebar_bg_color: $bg_color;
+$titlebar_fg_color: $fg_color;
 
 $panel_bg_color: $dark_bg_color;
 $panel_fg_color: $dark_fg_color;
