--- a/src/gtk-3.0/scss/_global.scss
+++ b/src/gtk-3.0/scss/_global.scss
@@ -3,18 +3,18 @@
 @import "functions";
 
 // default color scheme
-$bg_color: if($variant == "dark", #444, #eee);
-$fg_color: if($variant == "dark", #ddd, #555);
-$base_color: if($variant == "dark", #333, #fff);
-$text_color: if($variant == "dark", #eee, #333);
+$bg_color: if($variant == "dark", #37474f, #eee);
+$fg_color: if($variant == "dark", #cdd3de, #555);
+$base_color: if($variant == "dark", #263238, #fff);
+$text_color: if($variant == "dark", #cdd3de, #333);
 $selected_bg_color: #f0544c;
 $selected_fg_color: #fff;
-$tooltip_bg_color: #444;
-$tooltip_fg_color: #eee;
+$tooltip_bg_color: #37474f;
+$tooltip_fg_color: #cdd3de;
 
 // dark colors
-$dark_bg_color: #444;
-$dark_fg_color: #eee;
+$dark_bg_color: #37474f;
+$dark_fg_color: #cdd3de;
 
 // shadows
 $dark_shadow: #000;
