--- a/src/gtk-3.20/scss/_global.scss
+++ b/src/gtk-3.20/scss/_global.scss
@@ -61,8 +61,14 @@ $error_color: #f44336;
 $toolbar_bg_color: $bg_color;
 $toolbar_fg_color: $fg_color;
 
-$titlebar_bg_color: $bg_color;
-$titlebar_fg_color: $fg_color;
+$titlebar_bg_color: $dark_bg_color;
+$titlebar_fg_color: $dark_fg_color;
+
+$menu_bg_color: $dark_bg_color;
+$menu_fg_color: $dark_fg_color;
+
+$menubar_bg_color: $dark_bg_color;
+$menubar_fg_color: $dark_fg_color;
 
 $panel_bg_color: $dark_bg_color;
 $panel_fg_color: $dark_fg_color;
